--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.8.2</version>
+			<scope>test</scope>
 		</dependency>
-		
 	</dependencies>
 	<profiles>
 	</profiles>
